# CV_project

./: .env.example  .gitignore  CV_Project.ipynb  Readme.md  pyproject.toml  report.md  requirements.txt
src/: Balls.ipynb  DLT.py  Detect_Highlight.ipynb  feature_detection.py  highlight_detection.py  hough_line.py  light_related_stuff.py  main.py  notes.txt  preprocessing.py  utils.py
