[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["ShadowDragon5 <lauriuskas@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
python-dotenv = "^1.0.1"
scipy = "^1.13.1"
sympy = "^1.12.1"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
